--- a/history
+++ b/history
@@ -11,3 +11,7 @@
 - Updated spec to make config_vars.py a config file
 
 2.0-1 : 
+- Created new utility "Client Manager" to manage all client details
+- Relocated "Add New Client" from "Track Projects" to new "Client Manager"
+- Removed hidden feature to deploy database updates from project_tracker.py
+- General code cleanup in project_tracker.py
