--- a/history
+++ b/history
@@ -27,3 +27,11 @@
 - Began a script to update the database at install time if needed. Will complete in later release
 - Replaced the Linux rpm Makefile with a Jenkins build script
 - Removed legacy Freelance verbiage from project-tracker.menu
+
+2.2-1 : 
+- Added "/usr/bin/python3" to the top of all Python scripts
+- Relocated build directory into a new directory named "build"
+- Added fpdf 1.7.2 to be packaged with Linux packages
+- Updated build script to build fpdf and stage the Project Tracker files outside of the rpm spec file
+- Added support to build .deb packaged
+- Updated .gitignore to ignore built/staged files and directories
