--- a/history
+++ b/history
@@ -35,3 +35,4 @@
 - Updated build script to build fpdf and stage the Project Tracker files outside of the rpm spec file
 - Added support to build .deb packages
 - Updated .gitignore to ignore built/staged files and directories
+- Make version and release parameters to the build process to avoid hard-coding the values
