--- a/history
+++ b/history
@@ -40,3 +40,7 @@
 2.3-1 : 01/17/2022
 - Updated pdf.py and pay_time.py to correct invoice build errors with year rollover
 - Updated pay_time.py for federal holidays in 2022
+
+3.0-1 : TBD
+- Added support for MacOS to platform_config.py
+- Set a variable per-platform with the command to launch documents programmatically
